log
Wed 24 Apr 2024 05:55:27 PM UTC: 
 hashmap.c | 38 +++++++++++++++++++++++++++++++++-----
 1 file changed, 33 insertions(+), 5 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘enlarge’:
hashmap.c:71:10: error: unused variable ‘newArray’ [-Werror=unused-variable]
   71 |   Pair** newArray = (Pair**)malloc(newCapacity * sizeof(Pair**));
      |          ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
50feaef
Wed 24 Apr 2024 05:56:54 PM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
8c9474f
Wed 24 Apr 2024 06:03:07 PM UTC: 
 hashmap.c | 13 ++++++++++++-
 1 file changed, 12 insertions(+), 1 deletion(-)
 tests:  0|0
9fe68fa
Wed 24 Apr 2024 06:06:55 PM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
f6141e7
Wed 24 Apr 2024 06:08:52 PM UTC: 
 hashmap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  0|0
4592e4a
